add login and user
