# models/error_model.go
@@ -1,6 +1,0 @@
-package models
-
-type ErrorResponse struct {
-	Message string `json:"message"`
-	Code    int    `json:"code"`
-}
