# models/login_model.go
@@ -1,0 +1,7 @@
+package models
+
+type Login struct {
+	Email    string `json:"email"`
+	Username string `json:"username"`
+	Password string `json:"password"`
+}
